Gets IDs of available for join games. Changed ideology of SessionToken using